--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "Learning Scala with PlayFramework",
   "remoteUser": "developer",
+	"postCreateCommand": "sudo chown -R developer:developer .",
   "service": "devcontainer",
   "workspaceFolder": "/workspace",
   "dockerComposeFile": [
@@ -13,7 +14,7 @@
         "GitHub.copilot",
         "GitHub.copilot-chat",
         "exiasr.hadolint",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash"
