--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,6 +15,8 @@
         "GitHub.copilot-chat",
         "exiasr.hadolint",
         "ms-azuretools.vscode-docker",
+        "scalameta.metals",
+        "scala-lang.scala"
       ],
       "settings": {
         "terminal.integrated.defaultProfile.linux": "bash"
